--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,8 @@
 
     <div id="myapp">
         <p @click="incrmentCounter">{{counter}}</p>
+
+        <h1 @click = "hideMethod" v-if="flag">{{text}}</h1>
     </div>
     
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
@@ -20,11 +22,18 @@
             el : "#myapp",
             data : {
                 counter: 0,
+                text: "Hello word",
+                flag : true
             },
             methods: {
                 incrmentCounter() {
                    this.counter++ 
 
+                },
+                hideMethod(){
+                    if(this.flag == true){
+                        this.flag = false
+                    }
                 }
   }
         })
